--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -89,19 +89,19 @@ dependencies {
     // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // Coroutine
-    def coroutine_version = "1.6.4"
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-//    // viewmodel scope
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_verion"
+
 //    // activity viewmodel
 //    // Kotlin
-//    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
 //    classpath 'com.android.tools.build:gradle:3.6.3'
 //    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
