--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext {
+        glide_version = '4.15.1'
+        coroutine_version = "1.6.4"
+        lifecycle_verion = '2.5.0'
         kotlin_version = "1.7.20"
         hilt_version = '2.44'
         nav_version = "2.4.1"
