--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -21,7 +21,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 2
-        versionName "2.0"
+        versionName "3.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled true
     }
@@ -57,7 +57,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation project(":surveyandroid")
-    implementation 'com.google.firebase:firebase-firestore:24.8.1'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.cardview:cardview:1.0.0"
@@ -74,14 +73,29 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.opencsv:opencsv:5.3'
     implementation 'androidx.room:room-runtime:2.3.0'
-    implementation 'com.google.firebase:firebase-storage:20.2.1'
-    implementation 'com.google.firebase:firebase-crashlytics:18.4.3'
-    implementation 'com.google.firebase:firebase-analytics:21.3.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
-//    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
+
+//    implementation 'com.google.firebase:firebase-storage:20.2.1'
+//    implementation 'com.google.firebase:firebase-crashlytics:18.4.3'
+//    implementation 'com.google.firebase:firebase-analytics:21.3.0'
+    // Import the BoM for the Firebase platform
+    implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
+
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("com.google.firebase:firebase-crashlytics-ndk")
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-firestore-ktx")
+    implementation 'com.google.firebase:firebase-firestore:24.8.1'
+
+
+    // Also add the dependency for the Google Play services library and specify its version
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
+
+    //    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
 //    releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
     //firestore auth
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
+//    implementation 'com.google.firebase:firebase-auth:21.0.1'
     //graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     //update
