--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -39,13 +39,6 @@ android {
         jvmTarget = "1.8"
     }
 
-//    buildFeatures {
-//        compose true
-//    }
-//
-//    composeOptions {
-//        kotlinCompilerExtensionVersion = "1.3.2"
-//    }
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
@@ -86,6 +79,8 @@ dependencies {
     implementation("com.google.firebase:firebase-crashlytics-ndk")
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation("com.google.firebase:firebase-firestore-ktx")
+    implementation("com.google.firebase:firebase-messaging-ktx")
+    implementation("com.google.firebase:firebase-messaging")
     implementation 'com.google.firebase:firebase-firestore:24.8.1'
 
 
@@ -116,6 +111,16 @@ dependencies {
 //    // activity viewmodel
 //    // Kotlin
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    // retrofit & Gson
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    // flipper
+    debugImplementation "com.facebook.flipper:flipper:0.220.0"
+    debugImplementation 'com.facebook.soloader:soloader:0.10.5'
+    // timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
 
 //    classpath 'com.android.tools.build:gradle:3.6.3'
 //    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
