--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
     <uses-permission android:name="android.permission.BLUETOOTH" android:label="BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name= "android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
 
     <!-- TODO: Add both activity recognition permissions to the manifest. -->
@@ -25,15 +26,23 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission
+        android:name="android.permission.POST_NOTIFICATIONS"
+        tools:node="remove" />
+
 
     <application
         android:name=".di.BaseApplication"
@@ -87,15 +96,20 @@
             android:theme="@style/ActionBarLight"
             tools:targetApi="jelly_bean"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.facebook.flipper.android.diagnostics.FlipperDiagnosticActivity"
+            android:exported="true" />
         <!-- Mention the receiever name here -->
         <!-- Mention the receiever name here -->
         <!-- Mention the receiever name here -->
         <!-- Mention the receiever name here -->
-        <receiver android:name = ".NotificationListenerNews" />
+        <receiver android:name=".NotificationListenerNews" />
         <receiver android:name=".receiever.ApplicationSelectorReceiver" />
-        <receiver android:name=".receiever.ScreenStateReceiver"
+        <receiver
+            android:name=".receiever.ScreenStateReceiver"
             tools:ignore="Instantiatable" />
-        <receiver android:name=".receiever.BlueToothReceiver"
+        <receiver
+            android:name=".receiever.BlueToothReceiver"
             tools:ignore="Instantiatable" />
         <receiver android:name=".receiever.NetworkChangeReceiver$NetworkChangeBroadcastReceiver"
             android:enabled="true"
@@ -137,6 +151,16 @@
         <!--                <category android:name="android.intent.category.LAUNCHER" />-->
         <!--            </intent-filter>-->
         <!--        </receiver>-->
+        <service
+            android:name=".service.FirebaseService"
+            android:exported="false"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.permission.RECEIVE" />
+            </intent-filter>
+        </service>
+
         <receiver
             android:name=".receiever.ShutDownReceiver"
             android:enabled="true"
