--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -15,11 +15,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
     defaultConfig {
         applicationId "com.recoveryrecord.surveyandroid"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdk 33
         versionCode 2
         versionName "3.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
