--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -48,25 +48,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation project(":surveyandroid")
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     // ESM survey 兩個會衝突!!!??
     implementation 'com.google.android.material:material:1.0.0'
     //viewpage indicator
     implementation 'androidx.preference:preference:1.1.1'
     // TODO: Review play services library required for activity recognition.
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     //reload
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.opencsv:opencsv:5.3'
-    implementation 'androidx.room:room-runtime:2.3.0'
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
+//    implementation 'androidx.room:room-runtime:2.3.0'
+//    annotationProcessor 'androidx.room:room-compiler:2.3.0'
     // Import the BoM for the Firebase platform
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
 
@@ -95,7 +95,7 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_verion"
 
