--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -110,15 +110,15 @@
         <receiver
             android:name=".receiver.ScreenStateReceiver"
             tools:ignore="Instantiatable" />
-        <receiver
-            android:name=".receiver.BlueToothReceiver"
-            tools:ignore="Instantiatable"
-            android:permission="android.permission.BLUETOOTH"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.ACTION_FOUND" />
-            </intent-filter>
-        </receiver>
+        <!--        <receiver-->
+        <!--            android:name=".receiver.BlueToothReceiver"-->
+        <!--            tools:ignore="Instantiatable"-->
+        <!--            android:permission="android.permission.BLUETOOTH"-->
+        <!--            android:exported="true">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.ACTION_FOUND" />-->
+        <!--            </intent-filter>-->
+        <!--        </receiver>-->
 
         <receiver
             android:name=".receiver.NetworkChangeReceiver$NetworkChangeBroadcastReceiver"
@@ -155,6 +155,16 @@
         <receiver
             android:name=".receiver.LightSensorReceiver"
             tools:ignore="Instantiatable" />
+        <receiver android:name=".transitions.TransitionsReceiver"></receiver>
+
+        <service android:name=".detectedactivity.DetectedActivityService" />
+        <receiver
+            android:name=".detectedactivity.DetectedActivityReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.location.ACTIVITY_RECOGNITION" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
